# automated-parking-lot

./: CMakeLists.txt  README.md  generate_project.bat
src/: Bus.cpp  Bus.h  CMakeLists.txt  Car.cpp  Car.h  Constants.h  Motorcycle.cpp  Motorcycle.h  ParkingLot.cpp  ParkingLot.h  Vehicle.cpp  Vehicle.h  main.cpp
src/APL/: Bus.cpp  CMakeLists.txt  Car.cpp  Logger.cpp  Motorcycle.cpp  ParkingLot.cpp  UUIDGenerator.cpp  Vehicle.cpp
src/APL/include/APL/: Bus.h  Car.h  Constants.h  Exceptions.h  IUniqueIDGenerator.h  Logger.h  Motorcycle.h  ParkingLot.h  UUIDGenerator.h  UniqueIDGenerator.h  Utils.h  Vehicle.h
src/main/: AutomatedParkingLotApp.cpp  AutomatedParkingLotApp.h  CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  TestsAPL.cpp
